2014-11-10  Glenn Morris  <rgm@gnu.org>

	* configure.ac (etc/refcards/emacsver.tex): Generate it.
	* Makefile.in (etc-emacsver): New PHONY rule.
	(bootstrap-clean): Delete etc/refcards/emacsver.tex.

	* configure.ac (doc/emacs/emacsver.texi): Generate it.
	* make-dist (doc/emacs/emacsver.texi) [update]: No longer check it.

2014-11-08  Dani Moncayo  <dmoncayo@gmail.com>

	* build-aux/msys-to-w32: Simplify the initial over-engineered
	interface, and the implementation.
	* Makefile.in (epaths-force-w32): Update for the above.  Also
	simplify, assuming that the shell is bash (which is the case in MSYS).
	(msys_w32prefix_subst, msys_sed_sh_escape): Remove (no longer used).

2014-11-05  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (QUIET_SUBMAKE): Remove.
	(install-info, uninstall): Use --no-print-directory.  (Bug#18908)

2014-10-25  Eric S. Raymond  <esr@thyrsus.com>

	* autogen.sh: Neutralize language specific to a repository type.

2014-10-23  Paul Eggert  <eggert@cs.ucla.edu>

	* Makefile.in (ACLOCAL_INPUTS): Omit unnecessary use of 'wildcard'.

	Fix race in 'make info/dir', and speed it up.
	* Makefile.in (AWK, srcdir_doc_info_dir_inputs, info_dir_inputs):
	New macros.
	(clean): Remove info-dir.*.
	(info_dir_deps): Depend on make-info-dir too.
	(${srcdir}/info/dir): Make sure info directory exists.
	Don't call pwd; just redirect make-info-dir's stdout to temp file.
	* build-aux/make-info-dir: Send output to stdout.
	Take input file names from args.
	Fix a "FIXME inefficient looping" by using awk's associative arrays.
	Basically, this rewrites the script from scratch, and speeds up
	'make info/dir' from 2.6s to 0.07s on my platform.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Merge in all changes up to 24.4 release.

2014-10-19  Paul Eggert  <eggert@cs.ucla.edu>

	Merge from gnulib, incorporating:
	2014-10-18 readlinkat: port to AIX 7.1
	2014-10-07 fcntl: fix error reporting by dupfd
	* lib/fcntl.c, lib/readlinkat.c, lib/unistd.in.h, m4/readlinkat.m4: