@@ -1,5 +1,7 @@
 2014-11-10  Glenn Morris  <rgm@gnu.org>
 
+	* admin.el (set-version): No need to update doc/man/emacs.1.
+
 	* admin.el (set-version): No need to update etc/refcards/emacsver.tex.
 	(set-copyright): Update etc/refcards/emacsver.tex.in.
 
